--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -14,6 +14,39 @@
     <link rel="stylesheet" href="./head/css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="./head/css/style.css" type="text/css">
 
+    <!-- Offcanvas Menu Begin -->
+<div class="offcanvas-menu-overlay"></div>
+<div class="offcanvas-menu-wrapper">
+    <div class="offcanvas__close">+</div>
+    <ul class="offcanvas__widget">
+        <li><span class="icon_search search-switch"></span></li>
+        <li><a href="/user/wishlist"><span class="icon_heart_alt"></span> 
+                <div class="tip">2</div>
+            </a></li>
+        <li><a href="/add-to-cart/{{thid._id}}"><span class="icon_bag_alt"></span>
+                <div class="tip">2</div>
+            </a></li>
+    </ul>
+    <div class="offcanvas__logo">
+        {{!-- <a href="#"><img src="/assets/img/logo.png" alt=""></a> --}}
+        <h3>Mcart</h3>
+    </div>
+    <div id="mobile-menu-wrap"></div>
+    <div class="offcanvas__auth">
+        <a href="/login">Login</a>
+        <a href="/signup">Register</a>
+    </div>
+</div>
+<!-- Offcanvas Menu End -->
+
+
+
+
+
+
+
+
+
 <header class="header">
         <div class="container-fluid">
             <div class="row">
